Añadir Términos de Servicio3

--- a/terms.html
+++ b/terms.html
@@ -14,9 +14,9 @@
       <li><strong>Responsabilidades:</strong> El servicio se ofrece “tal cual”, sin garantías implícitas.</li>
       <li><strong>Modificaciones:</strong> Podemos actualizar estos términos; la versión publicada es la vigente.</li>
     </ol>
-    <p>Para cualquier duda, contáctanos en <a href="mailto:soporte@tudominio.com">soporte@tudominio.com</a>.</p>
+    <p>Para cualquier duda, contáctanos en <a href="mailto:soporte@tudominio.com">soporte@iamrobby.com</a>.</p>
     <footer style="margin-top: 4rem; font-size: .9rem; text-align: center;">
-      &copy; 2025 <a href="https://tudominio.com">TuEmpresa</a>. Todos los derechos reservados.
+      &copy; 2025 <a href="https://iamrobby.dev">RobbyDev</a>. Todos los derechos reservados.
     </footer>
   </body>
 </html>
