--- a/index.html
+++ b/index.html
@@ -27,31 +27,19 @@
         </ul>
       </section>
 
-      <section style="margin-bottom: 2rem;">
-        <h2>Empezar</h2>
-        <p>Para comenzar a usar nuestra aplicación, simplemente regístrate con tu email y comienza a chatear con tus amigos.</p>
-        <div style="text-align: center; margin: 2rem 0;">
-          <button style="background-color: #2563eb; color: white; padding: 12px 24px; border: none; border-radius: 6px; font-size: 1rem; cursor: pointer; margin-right: 1rem;">
-            Registrarse
-          </button>
-          <button style="background-color: #6b7280; color: white; padding: 12px 24px; border: none; border-radius: 6px; font-size: 1rem; cursor: pointer;">
-            Iniciar Sesión
-          </button>
-        </div>
-      </section>
 
       <section style="margin-bottom: 2rem;">
         <h2>Información legal</h2>
         <p>Antes de usar nuestra aplicación, te recomendamos revisar nuestros:</p>
         <ul>
           <li><a href="terms.html" style="color: #2563eb;">Términos de Servicio</a></li>
-          <li><a href="#" style="color: #2563eb;">Política de Privacidad</a></li>
+          <li><a href="privacy.html" style="color: #2563eb;">Política de Privacidad</a></li>
         </ul>
       </section>
     </main>
 
     <footer style="margin-top: 4rem; font-size: .9rem; text-align: center;">
-      &copy; 2025 <a href="https://tudominio.com" style="color: #2563eb;">TuEmpresa</a>. Todos los derechos reservados.
+      &copy; 2025 <a href="https://w2.iamrobby.dev" style="color: #2563eb;">RobbyDev</a>. Todos los derechos reservados.
     </footer>
   </body>
 </html> 
