Actualizar sitio web para cumplir requerimientos WhatsApp Business - información completa de empresa, servicios, uso de WhatsApp API, términos actualizados

--- a/index.html
+++ b/index.html
@@ -3,43 +3,107 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido - Aplicación Messenger</title>
+    <title>RobbyDev - Servicios de Desarrollo y Comunicación</title>
   </head>
   <body style="font-family: sans-serif; max-width: 800px; margin: auto; padding: 2rem;">
-    <header style="text-align: center; margin-bottom: 3rem;">
-      <h1 style="color: #2563eb; margin-bottom: 0.5rem;">Aplicación Messenger</h1>
-      <p style="font-size: 1.2rem; color: #6b7280;">Conecta con tus amigos de manera fácil y segura</p>
+    <header style="text-align: center; margin-bottom: 3rem; border-bottom: 2px solid #e5e7eb; padding-bottom: 2rem;">
+      <div style="font-size: 2rem; font-weight: bold; color: #2563eb; margin-bottom: 0.5rem;">
+        🚀 RobbyDev
+      </div>
+      <h1 style="color: #2563eb; margin-bottom: 0.5rem;">Servicios de Desarrollo y Comunicación</h1>
+      <p style="font-size: 1.2rem; color: #6b7280;">Soluciones tecnológicas y comunicación empresarial</p>
     </header>
 
     <main>
-      <section style="margin-bottom: 2rem;">
-        <h2>¿Qué es nuestra aplicación?</h2>
-        <p>Una plataforma de mensajería moderna que te permite comunicarte con tus contactos de forma rápida, segura y confiable. Diseñada pensando en tu privacidad y experiencia de usuario.</p>
+      <section style="margin-bottom: 3rem;">
+        <h2>Quiénes Somos</h2>
+        <div style="background-color: #f9fafb; padding: 1.5rem; border-radius: 8px; margin-bottom: 1rem;">
+          <p><strong>Nombre de la empresa:</strong> RobbyDev</p>
+          <p><strong>Representante legal:</strong> Roberto Arce</p>
+          <p><strong>Dirección:</strong> Santiago, Chile</p>
+          <p><strong>Email:</strong> <a href="mailto:soporte@iamrobby.com">soporte@iamrobby.com</a></p>
+          <p><strong>Email comercial:</strong> <a href="mailto:contacto@iamrobby.com">contacto@iamrobby.com</a></p>
+          <p><strong>Sitio web:</strong> <a href="https://w2.iamrobby.dev">https://w2.iamrobby.dev</a></p>
+        </div>
+        <p>Somos una empresa de desarrollo tecnológico especializada en crear soluciones digitales para empresas y emprendedores. Nos enfocamos en el desarrollo de aplicaciones web, servicios de comunicación y automatización de procesos empresariales.</p>
       </section>
 
-      <section style="margin-bottom: 2rem;">
-        <h2>Características principales</h2>
+      <section style="margin-bottom: 3rem;">
+        <h2>Nuestros Servicios</h2>
+        <div style="display: grid; gap: 1rem;">
+          <div style="border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 8px;">
+            <h3 style="color: #2563eb; margin-top: 0;">Desarrollo de Aplicaciones</h3>
+            <p>Creamos aplicaciones web personalizadas, plataformas de gestión y sistemas de comunicación para empresas de todos los tamaños.</p>
+          </div>
+          <div style="border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 8px;">
+            <h3 style="color: #2563eb; margin-top: 0;">Servicios de Comunicación</h3>
+            <p>Implementamos soluciones de mensajería empresarial, sistemas de notificaciones y canales de atención al cliente.</p>
+          </div>
+          <div style="border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 8px;">
+            <h3 style="color: #2563eb; margin-top: 0;">Automatización de Procesos</h3>
+            <p>Desarrollamos bots y sistemas automatizados para mejorar la eficiencia operativa de tu negocio.</p>
+          </div>
+        </div>
+      </section>
+
+      <section style="margin-bottom: 3rem;">
+        <h2>Uso de WhatsApp Business API</h2>
+        <div style="background-color: #f0f9ff; padding: 1.5rem; border-radius: 8px; border-left: 4px solid #2563eb;">
+          <h3 style="margin-top: 0; color: #2563eb;">¿Cómo utilizamos WhatsApp?</h3>
+          <ul>
+            <li><strong>Atención al Cliente:</strong> Soporte técnico y consultas comerciales para nuestros clientes</li>
+            <li><strong>Notificaciones de Proyecto:</strong> Actualizaciones sobre el progreso de desarrollos en curso</li>
+            <li><strong>Confirmaciones de Servicio:</strong> Confirmación de citas, entregas y hitos de proyecto</li>
+            <li><strong>Soporte Post-Venta:</strong> Seguimiento y mantenimiento de aplicaciones desarrolladas</li>
+            <li><strong>Comunicación Comercial:</strong> Propuestas, cotizaciones y comunicación con prospectos</li>
+          </ul>
+          <p><strong>Frecuencia de uso:</strong> Comunicación diaria con clientes activos, respuesta en horario comercial (9:00 - 18:00 hrs, lunes a viernes).</p>
+          <p><strong>Tipo de mensajes:</strong> Mensajes transaccionales, notificaciones de servicio y atención al cliente. No enviamos publicidad no solicitada.</p>
+        </div>
+      </section>
+
+      <section style="margin-bottom: 3rem;">
+        <h2>Nuestros Clientes</h2>
+        <p>Trabajamos con:</p>
         <ul>
-          <li><strong>Mensajería instantánea:</strong> Envía y recibe mensajes al instante</li>
-          <li><strong>Seguridad avanzada:</strong> Cifrado de extremo a extremo</li>
-          <li><strong>Multiplataforma:</strong> Disponible en web, móvil y escritorio</li>
-          <li><strong>Interfaz intuitiva:</strong> Fácil de usar para todos</li>
+          <li><strong>Startups y emprendedores</strong> que necesitan desarrollar su presencia digital</li>
+          <li><strong>Pequeñas y medianas empresas</strong> que buscan automatizar procesos</li>
+          <li><strong>Empresas establecidas</strong> que requieren modernizar sus sistemas de comunicación</li>
+          <li><strong>Profesionales independientes</strong> que necesitan herramientas digitales personalizadas</li>
         </ul>
       </section>
 
-
-      <section style="margin-bottom: 2rem;">
-        <h2>Información legal</h2>
-        <p>Antes de usar nuestra aplicación, te recomendamos revisar nuestros:</p>
+      <section style="margin-bottom: 3rem;">
+        <h2>Información Legal</h2>
+        <p>Antes de contratar nuestros servicios, te recomendamos revisar:</p>
         <ul>
-          <li><a href="terms.html" style="color: #2563eb;">Términos de Servicio</a></li>
-          <li><a href="privacy.html" style="color: #2563eb;">Política de Privacidad</a></li>
+          <li><a href="terms.html" style="color: #2563eb; text-decoration: none;">📋 Términos de Servicio</a></li>
+          <li><a href="privacy.html" style="color: #2563eb; text-decoration: none;">🔒 Política de Privacidad</a></li>
         </ul>
+      </section>
+
+      <section style="margin-bottom: 3rem;">
+        <h2>Contacto</h2>
+        <div style="background-color: #f9fafb; padding: 1.5rem; border-radius: 8px;">
+          <p><strong>💼 Consultas comerciales:</strong> <a href="mailto:contacto@iamrobby.com">contacto@iamrobby.com</a></p>
+          <p><strong>🛠️ Soporte técnico:</strong> <a href="mailto:soporte@iamrobby.com">soporte@iamrobby.com</a></p>
+          <p><strong>🔐 Privacidad:</strong> <a href="mailto:privacidad@iamrobby.com">privacidad@iamrobby.com</a></p>
+          <p><strong>🌐 Portafolio:</strong> <a href="https://iamrobby.dev" target="_blank">https://iamrobby.dev</a></p>
+        </div>
       </section>
     </main>
 
-    <footer style="margin-top: 4rem; font-size: .9rem; text-align: center;">
-      &copy; 2025 <a href="https://w2.iamrobby.dev" style="color: #2563eb;">RobbyDev</a>. Todos los derechos reservados.
+    <footer style="margin-top: 4rem; font-size: .9rem; text-align: center; border-top: 1px solid #e5e7eb; padding-top: 2rem;">
+      <div style="margin-bottom: 1rem;">
+        <strong>🚀 RobbyDev</strong> - Desarrollo y Comunicación Empresarial
+      </div>
+      <div style="margin-bottom: 1rem;">
+        <a href="https://iamrobby.dev" style="color: #2563eb; margin: 0 1rem;" target="_blank">Portafolio</a>
+        <a href="mailto:contacto@iamrobby.com" style="color: #2563eb; margin: 0 1rem;">Email</a>
+        <a href="terms.html" style="color: #2563eb; margin: 0 1rem;">Términos</a>
+        <a href="privacy.html" style="color: #2563eb; margin: 0 1rem;">Privacidad</a>
+      </div>
+      <p>&copy; 2025 <a href="https://w2.iamrobby.dev" style="color: #2563eb;">RobbyDev</a>. Todos los derechos reservados.</p>
     </footer>
   </body>
 </html> 
