--- a/terms.html
+++ b/terms.html
@@ -130,7 +130,7 @@
     </div>
 
     <footer style="margin-top: 4rem; font-size: .9rem; text-align: center;">
-      &copy; 2025 <a href="https://iamrobby.dev">RobbyDev</a>. Todos los derechos reservados.
+      &copy; 2025 <a href="https://w2.iamrobby.dev">RobbyDev</a>. Todos los derechos reservados.
     </footer>
   </body>
 </html>
