--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <strong>🚀 RobbyDev</strong> - Desarrollo y Comunicación Empresarial
       </div>
       <div style="margin-bottom: 1rem;">
-        <a href="https://iamrobby.dev" style="color: #2563eb; margin: 0 1rem;" target="_blank">Portafolio</a>
+        <a href="https://w2.iamrobby.dev" style="color: #2563eb; margin: 0 1rem;" target="_blank">Portafolio</a>
         <a href="mailto:contacto@iamrobby.com" style="color: #2563eb; margin: 0 1rem;">Email</a>
         <a href="terms.html" style="color: #2563eb; margin: 0 1rem;">Términos</a>
         <a href="privacy.html" style="color: #2563eb; margin: 0 1rem;">Privacidad</a>
