--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <p><strong>💼 Consultas comerciales:</strong> <a href="mailto:contacto@iamrobby.com">contacto@iamrobby.com</a></p>
           <p><strong>🛠️ Soporte técnico:</strong> <a href="mailto:soporte@iamrobby.com">soporte@iamrobby.com</a></p>
           <p><strong>🔐 Privacidad:</strong> <a href="mailto:privacidad@iamrobby.com">privacidad@iamrobby.com</a></p>
-          <p><strong>🌐 Portafolio:</strong> <a href="https://iamrobby.dev" target="_blank">https://iamrobby.dev</a></p>
+          <p><strong>🌐 Portafolio:</strong> <a href="https://w2.iamrobby.dev" target="_blank">https://iamrobby.dev</a></p>
         </div>
       </section>
     </main>
