Agregar servicios de asesorías informáticas y enlace de contratación en Gumroad - incluye sección completa de servicios con precios y enlaces directos

--- a/index.html
+++ b/index.html
@@ -25,24 +25,50 @@
           <p><strong>Email comercial:</strong> <a href="mailto:contacto@iamrobby.com">contacto@iamrobby.com</a></p>
           <p><strong>Sitio web:</strong> <a href="https://w2.iamrobby.dev">https://w2.iamrobby.dev</a></p>
         </div>
-        <p>Somos una empresa de desarrollo tecnológico especializada en crear soluciones digitales para empresas y emprendedores. Nos enfocamos en el desarrollo de aplicaciones web, servicios de comunicación y automatización de procesos empresariales.</p>
+        <p>Somos una empresa especializada en asesorías informáticas y desarrollo de proyectos tecnológicos para empresas y emprendedores. Ofrecemos consultoría integral en tecnología, desarrollo de aplicaciones web, automatización de procesos y soluciones digitales personalizadas para potenciar tu negocio.</p>
       </section>
 
       <section style="margin-bottom: 3rem;">
         <h2>Nuestros Servicios</h2>
         <div style="display: grid; gap: 1rem;">
           <div style="border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 8px;">
-            <h3 style="color: #2563eb; margin-top: 0;">Desarrollo de Aplicaciones</h3>
-            <p>Creamos aplicaciones web personalizadas, plataformas de gestión y sistemas de comunicación para empresas de todos los tamaños.</p>
+            <h3 style="color: #2563eb; margin-top: 0;">💻 Asesorías Informáticas</h3>
+            <p>Ofrecemos consultoría especializada en tecnología para empresas y emprendedores. Análisis de sistemas, recomendaciones tecnológicas, auditorías de seguridad y planificación de infraestructura IT.</p>
+            <div style="margin-top: 1rem; padding: 0.75rem; background-color: #f0f9ff; border-radius: 4px; border-left: 3px solid #2563eb;">
+              <small style="color: #1e40af; font-weight: bold;">🚀 ¡Disponible para contratación inmediata! Servicio remoto desde $25 USD/mes</small>
+            </div>
           </div>
           <div style="border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 8px;">
-            <h3 style="color: #2563eb; margin-top: 0;">Servicios de Comunicación</h3>
-            <p>Implementamos soluciones de mensajería empresarial, sistemas de notificaciones y canales de atención al cliente.</p>
+            <h3 style="color: #2563eb; margin-top: 0;">🚀 Desarrollo de Proyectos</h3>
+            <p>Desarrollamos proyectos tecnológicos completos desde la conceptualización hasta la implementación. Aplicaciones web, sistemas de gestión, plataformas e-commerce y soluciones a medida.</p>
           </div>
           <div style="border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 8px;">
-            <h3 style="color: #2563eb; margin-top: 0;">Automatización de Procesos</h3>
-            <p>Desarrollamos bots y sistemas automatizados para mejorar la eficiencia operativa de tu negocio.</p>
+            <h3 style="color: #2563eb; margin-top: 0;">📱 Aplicaciones Web y Móviles</h3>
+            <p>Creamos aplicaciones web responsivas, progressive web apps (PWA) y aplicaciones móviles multiplataforma usando las últimas tecnologías del mercado.</p>
           </div>
+          <div style="border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 8px;">
+            <h3 style="color: #2563eb; margin-top: 0;">💬 Servicios de Comunicación</h3>
+            <p>Implementamos soluciones de mensajería empresarial, chatbots, sistemas de notificaciones automáticas y canales de atención al cliente integrados.</p>
+          </div>
+          <div style="border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 8px;">
+            <h3 style="color: #2563eb; margin-top: 0;">⚙️ Automatización de Procesos</h3>
+            <p>Desarrollamos bots y sistemas automatizados para mejorar la eficiencia operativa: automatización de tareas repetitivas, integración de APIs y workflows personalizados.</p>
+          </div>
+          <div style="border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 8px;">
+            <h3 style="color: #2563eb; margin-top: 0;">🛠️ Soporte y Mantenimiento</h3>
+            <p>Servicio integral de soporte técnico, mantenimiento preventivo y correctivo, actualizaciones de sistemas y monitoreo de aplicaciones en producción.</p>
+          </div>
+        </div>
+        
+        <div style="background-color: #f8fafc; padding: 1.5rem; border-radius: 8px; margin-top: 2rem; border-left: 4px solid #10b981;">
+          <h3 style="margin-top: 0; color: #10b981;">✨ Servicios Adicionales</h3>
+          <ul>
+            <li><strong>Migración de sistemas:</strong> Actualización y migración de tecnologías legacy</li>
+            <li><strong>Integración de APIs:</strong> Conexión de sistemas y servicios de terceros</li>
+            <li><strong>Capacitación técnica:</strong> Entrenamientos personalizados para equipos</li>
+            <li><strong>Auditorías de código:</strong> Revisión y optimización de código existente</li>
+            <li><strong>Consultoría en transformación digital:</strong> Estrategias para digitalizar procesos empresariales</li>
+          </ul>
         </div>
       </section>
 
@@ -89,6 +115,38 @@
           <p><strong>🛠️ Soporte técnico:</strong> <a href="mailto:soporte@iamrobby.com">soporte@iamrobby.com</a></p>
           <p><strong>🔐 Privacidad:</strong> <a href="mailto:privacidad@iamrobby.com">privacidad@iamrobby.com</a></p>
           <p><strong>🌐 Portafolio:</strong> <a href="https://w2.iamrobby.dev" target="_blank">https://iamrobby.dev</a></p>
+        </div>
+      </section>
+
+      <section style="margin-bottom: 3rem;">
+        <h2>💼 Contrata Nuestros Servicios</h2>
+        <div style="background-color: #f0f9ff; padding: 2rem; border-radius: 8px; border-left: 4px solid #2563eb;">
+          <h3 style="margin-top: 0; color: #2563eb;">🚀 Servicios Disponibles</h3>
+          
+          <div style="background-color: white; padding: 1.5rem; border-radius: 8px; margin-bottom: 1.5rem; border: 1px solid #e5e7eb;">
+            <h4 style="margin-top: 0; color: #1e40af;">💻 Asesoría Informática Personalizada</h4>
+            <p>Recibe atención personalizada para resolver problemas informáticos, configurar sistemas o recibir recomendaciones técnicas en tiempo real. Ideal para pymes o usuarios individuales que necesitan soporte rápido y confiable.</p>
+            <p><strong>Modalidad:</strong> Remota (por sesión o bloque de tiempo)</p>
+            <p><strong>Precio:</strong> $25 USD/mes</p>
+            <div style="text-align: center; margin-top: 1rem;">
+              <a href="https://5781997810819.gumroad.com/l/Asesoria" target="_blank" style="background-color: #2563eb; color: white; padding: 12px 24px; border: none; border-radius: 6px; font-size: 1rem; text-decoration: none; display: inline-block; font-weight: bold;">
+                🛒 Contratar Asesoría Ahora
+              </a>
+            </div>
+          </div>
+
+          <div style="background-color: white; padding: 1.5rem; border-radius: 8px; border: 1px solid #e5e7eb;">
+            <h4 style="margin-top: 0; color: #1e40af;">📞 Otros Servicios Personalizados</h4>
+            <p>Para proyectos de desarrollo, automatización, aplicaciones web y servicios empresariales más complejos, contáctanos directamente para una cotización personalizada.</p>
+            <div style="text-align: center; margin-top: 1rem;">
+              <a href="mailto:contacto@iamrobby.com" style="background-color: #10b981; color: white; padding: 12px 24px; border: none; border-radius: 6px; font-size: 1rem; text-decoration: none; display: inline-block; font-weight: bold; margin-right: 1rem;">
+                📧 Solicitar Cotización
+              </a>
+              <a href="https://wa.me/message/TU_NUMERO_WHATSAPP" target="_blank" style="background-color: #059669; color: white; padding: 12px 24px; border: none; border-radius: 6px; font-size: 1rem; text-decoration: none; display: inline-block; font-weight: bold;">
+                💬 WhatsApp
+              </a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
