--- a/terms.html
+++ b/terms.html
@@ -24,10 +24,12 @@
     <h2>2. Servicios Ofrecidos</h2>
     <p>RobbyDev proporciona los siguientes servicios:</p>
     <ul>
-      <li><strong>Desarrollo de aplicaciones web:</strong> Creación de plataformas personalizadas</li>
-      <li><strong>Servicios de comunicación:</strong> Implementación de sistemas de mensajería empresarial</li>
-      <li><strong>Automatización de procesos:</strong> Desarrollo de bots y sistemas automatizados</li>
-      <li><strong>Soporte técnico:</strong> Mantenimiento y asistencia post-desarrollo</li>
+      <li><strong>Asesorías informáticas:</strong> Consultoría especializada en tecnología y análisis de sistemas</li>
+      <li><strong>Desarrollo de proyectos:</strong> Creación de soluciones tecnológicas completas y personalizadas</li>
+      <li><strong>Desarrollo de aplicaciones web:</strong> Creación de plataformas web responsivas y aplicaciones móviles</li>
+      <li><strong>Servicios de comunicación:</strong> Implementación de sistemas de mensajería empresarial y chatbots</li>
+      <li><strong>Automatización de procesos:</strong> Desarrollo de bots y sistemas automatizados para optimizar operaciones</li>
+      <li><strong>Soporte técnico:</strong> Mantenimiento, actualizaciones y asistencia post-desarrollo</li>
     </ul>
 
     <h2>3. Uso de WhatsApp Business API</h2>
