--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <a href="mailto:contacto@iamrobby.com" style="background-color: #10b981; color: white; padding: 12px 24px; border: none; border-radius: 6px; font-size: 1rem; text-decoration: none; display: inline-block; font-weight: bold; margin-right: 1rem;">
                 📧 Solicitar Cotización
               </a>
-              <a href="https://wa.me/message/TU_NUMERO_WHATSAPP" target="_blank" style="background-color: #059669; color: white; padding: 12px 24px; border: none; border-radius: 6px; font-size: 1rem; text-decoration: none; display: inline-block; font-weight: bold;">
+              <a href="https://wa.me/message/56996419674" target="_blank" style="background-color: #059669; color: white; padding: 12px 24px; border: none; border-radius: 6px; font-size: 1rem; text-decoration: none; display: inline-block; font-weight: bold;">
                 💬 WhatsApp
               </a>
             </div>
